--- a/overlay/OPlusFrameworksResTarget/res/values/config.xml
+++ b/overlay/OPlusFrameworksResTarget/res/values/config.xml
@@ -72,4 +72,16 @@
          non-zero. -->
     <integer name="config_defaultPeakRefreshRate">120</integer>
 
+     <!-- Paths to the libraries that contain device specific key handlers -->
+    <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+      <item>/system_ext/app/KeyHandler/KeyHandler.apk</item>
+      <item>/system_ext/priv-app/TouchGestures/TouchGestures.apk</item>
+    </string-array>
+
+    <!-- Names of the key handler classes -->
+    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+      <item>org.lineageos.settings.device.KeyHandler</item>
+      <item>com.android.touch.gestures.KeyHandler</item>
+    </string-array>
+
 </resources>
